--- a/1.md
+++ b/1.md
@@ -3,4 +3,9 @@ three.js中
 setClearColorHex()方法已经失效
 
 ## sql server 连接ASP.NET
+c# 中的connectionstring 后面如果是windows身份登录可以用新建udl来进行连接，
+1.是服务器的名称
+2.是使用Windows NT集成安全设置
+3.是在服务器上选择数据库
+
  
